// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Integration Test query commits of document 1`] = `
Array [
  Object {
    "entityName": "int_test_document",
    "events": Array [
      Object {
        "type": "DocumentCreated",
      },
      Object {
        "type": "DocumentReferenceDefined",
      },
      Object {
        "type": "DocumentLinkDefined",
      },
      Object {
        "type": "DocumentLoanIdDefined",
      },
      Object {
        "type": "DocumentTitleDefined",
      },
    ],
  },
]
`;

exports[`Document Integration Test query document by ID 1`] = `
Object {
  "link": "test-link-0001",
  "reference": "DOCREF0001",
  "status": 0,
  "title": "test-title",
}
`;

exports[`Document Integration Test query eocument by ID 1`] = `
Object {
  "link": "test-link-0101",
  "reference": "DOC0101",
  "status": 0,
  "title": "Test Title 101",
}
`;

exports[`Document Integration Test query focument by ID 1`] = `
Object {
  "link": "test-link-0102",
  "reference": "DOC0102",
  "status": 0,
  "title": "Test Title 102",
}
`;

exports[`Federated queries federated query loan and document 1`] = `
Object {
  "description": "test-description",
  "documents": null,
  "reference": "MYTRADE0001",
  "status": 0,
}
`;

exports[`Federated queries federated query loan details by ID 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "pete@fake.it",
    "name": "Pete",
    "phone": "555-12345",
    "salutation": "Mr.",
    "title": "Owner",
  },
  "currency": "HKD",
  "loan": Object {
    "description": "test-description",
    "reference": "MYTRADE0001",
    "status": 0,
  },
  "loanType": "Post-shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Pete N Co. Ltd",
    "registration": "BR0000001",
    "type": "Money Launderer",
  },
  "startDate": "2019-10-11",
  "tenor": 60,
}
`;

exports[`Loan Details Integration Test query loan details by ID 1`] = `
Object {
  "approvedAmt": null,
  "comment": null,
  "contact": Object {
    "email": "pete@fake.it",
    "name": "Pete",
    "phone": "555-12345",
    "salutation": "Mr.",
    "title": "Owner",
  },
  "currency": "HKD",
  "loanType": "Post-shipment",
  "requestedAmt": 50000,
  "requester": Object {
    "name": "Pete N Co. Ltd",
    "registration": "BR0000001",
    "type": "Money Launderer",
  },
  "startDate": "2019-10-11",
  "tenor": 60,
}
`;

exports[`Loan Integration Test query commits of loan 1`] = `
Array [
  Object {
    "entityName": "int_test_loan",
    "events": Array [
      Object {
        "type": "LoanApplied",
      },
      Object {
        "type": "LoanReferenceDefined",
      },
      Object {
        "type": "LoanDescriptionDefined",
      },
    ],
  },
]
`;

exports[`Loan Integration Test query loan by ID 1`] = `
Object {
  "description": "test-description",
  "reference": "MYTRADE0001",
  "status": 0,
}
`;

exports[`User Integration Test query commits of user 1`] = `
Array [
  Object {
    "entityName": "int_test_user",
    "events": Array [
      Object {
        "type": "UserCreated",
      },
    ],
  },
]
`;
